--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,8 @@
   },
   "env": {
     "browser": true,
-    "node": true
+    "node": true,
+    "jest": true
   },
   "globals": {
     "JSX": true
